Import of TOKUHIROM/Smart-Args-0.05 from CPAN.
gitpan-cpan-distribution: Smart-Args
gitpan-cpan-version:      0.05
gitpan-cpan-path:         TOKUHIROM/Smart-Args-0.05.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension args
 
+0.05
+
+    - Unknown parameter names are now warned (gfx)
+    - Fix a typo in SYNOPSIS (@syohex)
+
 0.04
 
     - Invocants can have type rules (gfx):
