--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension args
 
+0.06
+
+    - Fix carp level to report warnings in the caller's context (gfx)
+    - remove testing dependencies for Test::Exception
+
 0.05
 
     - Unknown parameter names are now warned (gfx)
