--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension args
 
+0.07
+
+    - fixed deps in testing
+
 0.06
 
     - Fix carp level to report warnings in the caller's context (gfx)
