Import of TOKUHIROM/Smart-Args-0.09 from CPAN.
gitpan-cpan-distribution: Smart-Args
gitpan-cpan-version:      0.09
gitpan-cpan-path:         TOKUHIROM/Smart-Args-0.09.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension args
 
+0.09
+
+    - better error message with Carp::confess
+
 0.08
 
     - added 'args_pos' function
