Import of TOKUHIROM/Smart-Args-0.10 from CPAN.
gitpan-cpan-distribution: Smart-Args
gitpan-cpan-version:      0.10
gitpan-cpan-path:         TOKUHIROM/Smart-Args-0.10.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension args
 
+0.10
+
+    better dist
+    - depend to latest Mouse, PadWalker, Exporter.
+    - better M::I
+    - depend to Perl 5.8
+
 0.09
 
     - better error message with Carp::confess
